@@ -21,6 +21,7 @@ munin (work)
   * Plugins: Make generic/postfix_mailstats catch more formats (Deb#292110).
   * Plugins: Added plugin generic/hddtemp_smartctl, made by Lupe Christoph.
     Made it the default hddtemp plugin.
+  * Plugins: Added madwifi support to linux/if_* plugins.
   * Docs: Documented minimum requirements for use of graph_sums (SF#1109040).
   * Installation: Make the single python plugin use @@PYTHON@@ again.
 
